src/app/dashboard/_components/Settings/MenuEditor/menuEditorItem.scss
.menuEditorItem {
	position: relative;
	display: flex;
	width: 100%;
	height: var(--menuItemSize);
	background-color: var(--colorBackgroundPrimary);
	box-shadow: 0 0 12px rgb(100 100 100 / 10%);
	margin-bottom: 20px;
	border-radius: 20px;

	@media (hover: hover) {
		&:hover {
			.menuItemPicture {
				.vegIcon {
					width: auto;
					border-width: 1px;
					transition: all 0.15s ease-out;

					.label {
						display: block;
					}
				}
			}
		}
	}

	.menuItemPicture {
		position: relative;
		width: calc(var(--menuItemSize) - 20px);
		height: calc(var(--menuItemSize) - 20px);
		border-radius: 15px;
		overflow: hidden;
		border: 1px solid var(--colorContentTertiary);
		margin: 10px;

		>.image {
			display: block;
			width: 100%;
			height: 100%;
			border: 1px solid var(--colorContentTertiary);
			background-size: cover !important;
			background-position: center !important;
		}

		>.placeholder {
			$iconSize: 50px;

			display: block;
			width: 100%;
			height: 100%;
			mask-size: $iconSize;
			mask-repeat: no-repeat;
			mask-position: center;
			background-color: var(--colorContentTertiary);
		}

		.vegIcon {
			position: absolute;
			left: 6px;
			bottom: 6px;
			width: 24px;
			height: 24px;
			display: flex;
			justify-content: center;
			align-items: center;
			overflow: hidden;
			border-radius: 10px;
			color: var(--colorContentPrimary);
			background-color: var(--colorBackgroundPrimary);
			border: 0 solid var(--colorContentTertiary);

			&.veg .icon {
				color: rgb(var(--colorAlertSuccessRGB));
			}

			/* stylelint-disable-next-line selector-class-pattern */
			&.non-veg .icon {
				color: rgb(var(--colorAlertErrorRGB));
			}

			/* stylelint-disable-next-line selector-class-pattern */
			&.contains-egg .icon {
				color: rgb(var(--colorAlertWarningRGB));
			}

			.icon {
				padding: 16px;
			}

			.label {
				display: none;
				padding: 10px 10px 10px 0;
				font-size: 12px;
				text-transform: capitalize;
				white-space: nowrap;
				user-select: none;
				color: var(--colorContentPrimary);
			}
		}
	}

	.menuItemData {
		position: relative;
		flex: 1;
		display: flex;
		flex-direction: column;
		margin: 18px 10px;
		gap: 1rem;

		.menuItemTitle {
			font-size: 18px;
			font-variation-settings: 'wdth' 75, 'wght' 500;
			margin: 0;
			padding-right: 80px;
			display: -webkit-box;
			-webkit-line-clamp: 1;
			-webkit-box-orient: vertical;
			overflow: hidden;
			text-overflow: ellipsis;
		}

		.menuItemDesc {
			margin: 0;
			font-size: 14px;
			display: -webkit-box;
			-webkit-line-clamp: 5;
			-webkit-box-orient: vertical;
			overflow: hidden;
			text-overflow: ellipsis;
			font-variation-settings: 'wdth' 75, 'wght' 400;
			opacity: 0.8;
		}

		.menuItemPrice {
			position: absolute;
			bottom: 0;
			margin: 0;
			font-size: 16px;
		}
	}

	.menuItemOptions {
		position: absolute;
		width: auto;
		height: auto;
		top: 10px;
		right: 10px;
		display: flex;
		justify-content: flex-end;
		gap: 8px;

		.menuItemEditButton,
		.menuItemVisibleButton {
			width: 35px;
			height: 35px;
			display: flex;
			justify-content: flex-start;
			align-items: center;
			overflow: hidden;
			border-radius: 9999px;
			color: var(--colorContentPrimary);
			background-color: var(--colorBackgroundPrimary);
			border: 1px solid var(--colorContentTertiary);
			transition: all 0.2s linear;
			cursor: pointer;
		}
	}
}


@media (width <=750px) {
	.menuEditorItem {
		.menuItemData {
			gap: 0.5rem;

			.menuItemTitle {}

			.menuItemDesc {
				font-size: 13px;
				-webkit-line-clamp: 4;
			}

			.menuItemPrice {}
		}
	}
}

@media (width <=530px) {
	.menuEditorItem {
		margin-bottom: 15px;
		border-radius: 15px;

		.menuItemData {
			.menuItemTitle {
				font-size: 14px;
			}

			.menuItemDesc {
				font-size: 11px;
				-webkit-line-clamp: 3;
			}

			.menuItemPrice {
				font-size: 14px;
			}
		}
	}
}

